# Arqui2_Proyecto2

./: CMakeLists.txt  README.md  main.cpp
Assembler/: .code.txt.kate-swp  assembler.py
codes/: xor_code.txt
images/: jojomidorya.pgm
src/: ALU.cpp  ALU.h  decode.cpp  decode.h  image.cpp  image.h  mem_ops.cpp  mem_ops.h  pgm.cpp  pgm.h  picture_tools.cpp  picture_tools.h  pipelines.cpp  pipelines.h  signals.h  vCPU.cpp  vector_loader.cpp  vector_loader.h
